Proper file add.